# python_hexedit

./: MANIFEST.in  README.md  __main__.py  pyproject.toml
hexedit/: __main__.py  application.py  common.py  utils.py
hexedit/ecc/: __init__.py  bch.py  hamming.py  type.py
hexedit/nand/: __init__.py  config.py
hexedit/view/: __init__.py  bars.py  events.py  hex_area.py  main.py  menus.py  widgets.py  windows.py
