[build-system]
requires = ["setuptools>=61.2.0", "wheel", "setuptools_scm[toml]>=1.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hexedit"
readme = "README.md"
description = "Hex Editor GUI in Python"
authors = [{name = "ClausNC3"}]
classifiers = [
	"Development Status :: 4 - Beta",
	"Environment :: Other Environment",
	"Intended Audience :: Developers",
	"License :: OSI Approved",
	"License :: OSI Approved :: MIT License",
	"Operating System :: OS Independent",
	"Programming Language :: Python",
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3 :: Only",
]
keywords = ["hexedit", "python", "gui"]
license = {text = "MIT"}
requires-python = ">=3.8"
dynamic = ["version"]
dependencies = [
]

[project.urls]
Homepage = "https://github.com/ClausNC3/python_hexedit"

[project.gui-scripts]
hexedit = "hexedit.__main__:main"

[tool.setuptools]
zip-safe = true
packages = ["hexedit", "hexedit.view", "hexedit.view.assets"]

[tool.setuptools_scm]
fallback_version = "0.1.0"
# local_scheme = "no-local-version"